--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:customtabs:26.+'
 
     compile 'com.squareup.moshi:moshi:1.5.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
