--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'io.realm:android-adapters:2.1.0'
+
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
 }
